[package]
name = "estampa"
version = "0.1.0-alpha"
edition = "2021"
repository = "https://git.sr.ht/~nixgoat/estampa"
authors = ["Lux Aliaga <me@lux.rip>"]
license = "AGPL-3.0-or-later"

[dependencies]
rustls = "0.23"
rustls-pemfile = "2.1"
thiserror = "1.0"
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
x509-cert = "0.2"
x509-verify = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.40"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
