[package]
name = "estampa"
version = "0.1.0-alpha"
edition = "2021"
repository = "https://git.sr.ht/~nixgoat/estampa"
authors = ["Lux Aliaga <me@lux.rip>"]
license = "AGPL-3.0-or-later"

[dependencies]
rcgen = "0.13"
rustls-pemfile = "2.1"
thiserror = "1.0"
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.40"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread"]

[dependencies.x509-cert]
version = "0.2"
features = ["std"]
default-features = false

[dependencies.x509-verify]
version = "0.4"
features = ["rsa", "sha2"]
default-features = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
