[package]
name = "estampa"
version = "0.1.2"
edition = "2021"
repository = "https://git.sr.ht/~nixgoat/estampa"
authors = ["Lux Aliaga <me@lux.rip>"]
license = "AGPL-3.0-or-later"

[dependencies]
pem = "3.0"
rustls-pemfile = "2.1"
sha2 = "0.10"
thiserror = "1.0"
time = "0.3"
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.rcgen]
version = "0.13"
features = ["pem", "crypto", "x509-parser", "aws_lc_rs"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.40"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread"]

[dependencies.x509-parser]
version = "0.16"
features = ["verify"]

[dev-dependencies]
tempfile = "3.13"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
